posiGen_FullsendBox/src/objects/Referral_Promotions__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Promotions offered to customers, non-customers and employees as incentives for referring new customers to the company.</description>
    <fields>
        <fullName>Article_Body__c</fullName>
        <description>Body text of any article.</description>
        <label>Article Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Parties__c</fullName>
        <description>Types of referrers eligible for program.</description>
        <inlineHelpText>Who is eligible for this program?</inlineHelpText>
        <label>Eligible Parties</label>
        <picklist>
            <picklistValues>
                <fullName>Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Customers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date for a promotional time frame.</description>
        <inlineHelpText>When does the promotion end?</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payout_Amount__c</fullName>
        <description>Cash value paid out.</description>
        <inlineHelpText>How much is the payout?</inlineHelpText>
        <label>Payout Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Type__c</fullName>
        <description>Promotional payout type.</description>
        <inlineHelpText>What type of payout is received?</inlineHelpText>
        <label>Payout Type</label>
        <picklist>
            <picklistValues>
                <fullName>American Express Giftcard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Name of promotional program.</description>
        <inlineHelpText>What is the name of this promotional program?</inlineHelpText>
        <label>Program Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>Promotional program type.</description>
        <inlineHelpText>What type of promotional program is it?</inlineHelpText>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date for an effective period time frame.</description>
        <inlineHelpText>When does this promotion start?</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Referral Promotions</label>
    <pluralLabel>Referral Promotions</pluralLabel>
</CustomObject>